INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${GNULIBS_INCLUDE_DIR})
LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBRARIES} )

IF(GL_FOUND)
  ADD_EXECUTABLE(MATHMAR MATHMAR.cpp)
  TARGET_LINK_LIBRARIES(MATHMAR ${OPENGL_LIBS})

  INSTALL(TARGETS MATHMAR RUNTIME DESTINATION bin)
ENDIF(GL_FOUND)
